--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
                 <div class="text">
                  <h2>Tentang Saya</h2> 
-                 Halo semuanya~~~, Perkenalkan Saya Samianjab Kalya Diar biasa dipangil Sam, Sem, Mi apa aja dah yang penting ada kaitannya sama nama saya. Saya lahir di Kota Tangerang pada 1 Maret 2008, yang berarti saya umur 16 tahun. Saya saat ini sudah di j5enjang SMK, dan saya memilih SMK Nusantara 1 Kota Tangerang, dan memilih jurusan RPL (Rekayasa Perangkat Lunak). Hobi saya adalah main video game haha, dan makanan favorit saya adalah ayam geprek
+                 Halo semuanya, Perkenalkan Saya Samianjab Kalya Diar biasa dipangil Sam, Sem, Mi apa aja dah yang penting ada kaitannya sama nama saya. Saya lahir di Kota Tangerang pada 1 Maret 2008, yang berarti saya umur 16 tahun. Saya saat ini sudah di jenjang SMK, dan saya memilih SMK Nusantara 1 Kota Tangerang, dan memilih jurusan RPL (Rekayasa Perangkat Lunak). Hobi saya adalah main video game haha, dan makanan favorit saya adalah ayam geprek
                  <p>
                 </p>
                 </div>
